--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/LevelOneProject/central-services-qa#readme",
   "devDependencies": {
-    "aws-sdk": "2.50.0"
+    "aws-sdk": "2.50.0",
+    "bluebird": "3.5.0"
   }
 }
