--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "deploy"
   ],
   "author": "",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "CC-BY-SA-4.0",
   "bugs": {
     "url": "https://github.com/LevelOneProject/central-services-qa/issues"
   },
